--- a/docs/_pages/home.md.org
+++ b/docs/_pages/home.md.org
@@ -1,5 +1,4 @@
 ---
-title: Welcome !
 layout: splash
 permalink: /
 hidden: true
@@ -7,11 +6,11 @@ header:
   overlay_color: "#5e616c"
   overlay_image: /assets/images/mm-home-page-feature.jpg
   actions:
-    - label: "<i class='fas fa-download'></i> About me"
+    - label: "<i class='fas fa-download'></i> Install now"
       url: "/docs/quick-start-guide/"
 excerpt: >
-  Hello! I am Rajith<br />
-  <small>This is a place for people who love to enhance their technical knowledge.Feel free to go through the pages. </small>
+  A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios.<br />
+  <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.23.0">Latest release v4.23.0</a></small>
 feature_row:
   - image_path: /assets/images/mm-customizable-feature.png
     alt: "customizable"
